--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./src/main.css">
-  <title>Hello World!</title>
+  <!-- <link rel="stylesheet" href="./src/main.css"> -->
+  <title>My Homepage</title>
 </head>
 <body>
-<p>Hello World!</p>this is it! Please scroll down to the bottom of this page and then give me a call</p>
-<img src="./src/assets/meadow-5.jpg" alt="">
+<nav>
+  <a href="#home" class="transition">Home</a>
+  <a href="#about" class="transition">About</a>
+  <a href="#favourites" class="transition">Favourites</a>
+  <a href="contact" class="transition">Contact</a>
+</nav>
+<img id="home" class="hero-img" src="./src/assets/beach.JPG" alt="beachbabies">
+<section class="profile"
+<
 <h1>upside down text</h1>
 </body>
 </html>
