--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link rel="stylesheet" href="./src/main.css"> -->
+  <link rel="stylesheet" href="./src/main.css"> -->
   <title>My Homepage</title>
+
 </head>
 <body>
 <nav>
@@ -14,9 +16,12 @@
   <a href="#favourites" class="transition">Favourites</a>
   <a href="contact" class="transition">Contact</a>
 </nav>
-<img id="home" class="hero-img" src="./src/assets/beach.JPG" alt="beachbabies">
-<section class="profile"
-<
-<h1>upside down text</h1>
+<img id="home" class="hero-img" src="./src/assets/beach.JPG" width ="2000" height="1750" alt="beachbabies">
+<section class="profile">
+<img src="./src./assets/profpic.JPG" width="500" height="350" alt="profile photo">
+<h1 class="name">Kristin Iliffe</h1>
+<h2>Keeping Things Sideways Since 1974</h2>
+</section>
 </body>
 </html>
+style
